--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        " \"Hi Lisa, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
    "source": [
     "welcome_messages = []\n",
     "for new_employee in new_employees:\n",
-    "    welcome_messages.append(f\"Hi {new_employee.title()} + \", I'm so glad to be working with you!\" )\n",
+    "    welcome_messages.append(f\"Hi {new_employee.title()}, I'm so glad to be working with you!\")\n",
     "\n",
     "welcome_messages"
    ]
